--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     </style>
 </head>
 <body>
+    
     <div class="container">
-        <h1>Welcome to Jessica Nicholson's Website</h1>
+        <img src="your_image_file.jpg" alt="Jessica Nicholson" style="width: 200px; height: 200px; border-radius: 50%;">
+        <h1>Jessica Nicholson</h1>
         <p>PhD Student in Computer Science</p>
         <p>Researching Reinforcement Learning</p>
         <a href="#about" class="btn">Learn More</a>
