--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     
     <div class="container">
-        <img src="jess_prof_pic.jpg.jpg" alt="Jessica Nicholson" style="width: 200px; height: 200px; border-radius: 50%;">
+        <img src="jess_prof_pic.jpg" alt="Jessica Nicholson" style="width: 200px; height: 200px; border-radius: 50%;">
         <h1>Jessica Nicholson</h1>
         <p>PhD Student in Computer Science</p>
         <p>Researching Reinforcement Learning</p>
