--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <body>
     
     <div class="container">
-        <img src="jess_prof_pic.jpg" alt="Jessica Nicholson" style="width: 200px; height: 200px; border-radius: 50%;">
+        <img src="jess_prof_pic.jpg" alt="Jessica Nicholson" style="width: 400px; height: 500px; border-radius: 50%;">
         <h1>Jessica Nicholson</h1>
-        <p>PhD Student in Computer Science TEST </p>
+        <p>PhD Student in Computer Science </p>
         <p>Researching Reinforcement Learning</p>
         <a href="#about" class="btn">Learn More</a>
     </div>
