--- a/index.html
+++ b/index.html
@@ -44,18 +44,29 @@
     <div class="container">
         <img src="jess_prof_pic.jpg" alt="Jessica Nicholson" style="width: 400px; height: 500px; border-radius: 50%;">
         <h1>Jessica Nicholson</h1>
-        <p>PhD Student in Computer Science </p>
-        <p>Researching Reinforcement Learning</p>
-        <a href="#about" class="btn">Learn More</a>
+        <p> Welcome to my page </p>
+        <a href="#about" class="btn">Blog</a>
+        <a href="#about" class="btn">Publications</a>
+        <a href="#about" class="btn">CV</a>
     </div>
 
-    <!-- About Section -->
-    <section id="about" style="background-color: #ddd; padding: 50px 0;">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>I am Jessica Nicholson, a PhD student in computer science with a focus on reinforcement learning. My research interests include...</p>
-            <p>...</p>
-        </div>
-    </section>
+<section id="about" style="background-color: #ddd; padding: 50px 0;">
+    <div class="container">
+        <h2>About Me</h2>
+        <p>I am Jessica Nicholson, a PhD student in computer science with a focus on reinforcement learning.</p>
+        <p><strong>Research Interests:</strong><br>
+        Artificial Intelligence and Machine Learning with a focus in Reinforcement Learning, Unsupervised Learning and Cognitive Development of Robots. Above all, the ethical and transparent implementation of these subject matters.</p>
+        
+        <p><strong>Background:</strong><br>
+        BSc Economics and Women & Gender Studies, Rutgers University<br>
+        MSc Data Science, University of Bath<br>
+        I have three years of experience working as a software and management consultant, and one year of experience as a data analyst within the fintech and blockchain domain.</p>
+        
+        <p><strong>Supervisors:</strong><br>
+        Prof Özgür Şimşek<br>
+        Dr Gosia Gocłowska</p>
+    </div>
+</section>
+
 </body>
 </html>
