--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
         <img src="jess_prof_pic.jpg" alt="Jessica Nicholson" style="width: 400px; height: 500px; border-radius: 50%;">
         <h1>Jessica Nicholson</h1>
         <p> Welcome to my page </p>
-        <a href="#about" class="btn">Blog</a>
-        <a href="#about" class="btn">Publications</a>
-        <a href="#about" class="btn">CV</a>
+         <a href="blog.html" class="btn">Blog</a>
+        <a href="news_publications.html" class="btn">News & Publications</a>
+        <a href="cv.html" class="btn">CV</a>
     </div>
 
 <section id="about" style="background-color: #ddd; padding: 50px 0;">
+
     <div class="container">
+    
         <h2>About Me</h2>
         <p>I am Jessica Nicholson, a PhD student in computer science with a focus on reinforcement learning.</p>
         <p><strong>Research Interests:</strong><br>
@@ -66,6 +68,7 @@
         <p><strong>Supervisors:</strong><br>
         Prof Özgür Şimşek<br>
         Dr Gosia Gocłowska</p>
+        
     </div>
 </section>
 
