--- a/cv.html
+++ b/cv.html
@@ -4,11 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <style>
+        .header-container {
+            display: flex;
+            align-items: center;
+        }
+        .header-container img {
+            width: 250px; /* Adjust width as needed */
+            height: auto; /* Maintain aspect ratio */
+            border-radius: 50%;
+            margin-right: 20px; /* Add some spacing between image and text */
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        article {
+            margin-bottom: 20px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
     <!-- You can link your CSS file here if you have one -->
 </head>
 <body>
     <header>
-        <h1>CV</h1>
+     <div class="header-container">
+            <img src="nacho2.png" alt="Jessica Nicholson">
+            <h1>Jess's CV </h1>
+        </div>
+
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,7 +58,7 @@
     </header>
 
     <main>
-    <h1>Embedded PDF Example</h1>
+
     
     <embed src="Jessica_Nicholson_PhD_Student.pdf" type="application/pdf" width="100%" height="600px">
     
@@ -31,3 +70,4 @@
     </footer>
 </body>
 </html>
+
