--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         
         <a href="blog.html" class="btn">Blog</a>
-        <a href="news_publications2.html" class="btn">News & Publications</a>
+        <a href="news_publications.html" class="btn">News & Publications</a>
         <a href="cv.html" class="btn">CV</a>
     </div>
 <section id="about" style="background-color: #ddd; padding: 50px 0;">
@@ -101,4 +101,3 @@
 
 </body>
 </html>
-
