--- a/news_publications.html
+++ b/news_publications.html
@@ -62,6 +62,7 @@
         <main>
         <h2>News:</h2>
         <ul>
+        <li> Gave a talk <i>"Understanding How AI Works and Its Impact on Our World"</i> at Hayesfield Girls’ School </li>
         <li> Attended <a href="https://www.m2lschool.org/">Mediterranean Machine Learning Summer School</a> in 2022  </li>
         </ul>
 
@@ -76,3 +77,4 @@
 
 </body>
 </html>
+
