--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     
     <div class="container">
-        <img src="jess_prof_pic.jpg" alt="Jessica Nicholson" style="width: 400px; height: 500px; border-radius: 50%;">
+        <img src="jess_prof_pic2.jpg" alt="Jessica Nicholson" style="width: 400px; height: 500px; border-radius: 50%;">
         <h1>Jessica Nicholson</h1>
         <p> jmn43@bath.ac.uk &emsp;&emsp; <a href="https://github.com/JessicaNicholson1">Jess Github</a>   </p>
         <p> Proactive, research-oriented PhD student with over 5 years of experience in the software & tech industry.
