--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <div class="container">
         <img src="jess_prof_pic2.jpg" alt="Jessica Nicholson" style="width: 400px; height: 500px; border-radius: 50%;">
         <h1>Jessica Nicholson</h1>
-        <p> jmn43@bath.ac.uk &emsp;&emsp; <a href="https://github.com/JessicaNicholson1">Jess Github</a>   </p>
-        <p> Proactive, research-oriented PhD student with over 5 years of experience in the software & tech industry.
+        <p> jmn43@bath.ac.uk &emsp;&emsp; <a href="https://github.com/JessicaNicholson1">Jess Github</a> &emsp;&emsp; <a href="https://www.linkedin.com/in/jessica-nicholson-4b117092/">Jess LinkedIn</a>   </p>        <p> Proactive, research-oriented PhD student with over 5 years of experience in the software & tech industry.
         Proficient in various platforms, languages, and embedded systems. Experienced with the latest cutting edge
         development tools and procedures. Able to effectively self-manage during independent projects, as well as
         collaborate as part of a productive team. </p>
