--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         
         <a href="blog.html" class="btn">Blog</a>
-        <a href="news_publications.html" class="btn">News & Publications</a>
+        <a href="news_publications.html" class="btn">News</a>
         <a href="cv.html" class="btn">CV</a>
     </div>
 <section id="about" style="background-color: #ddd; padding: 50px 0;">
