--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
             <p>Below you can find blog posts that cover various topics within Reinforcement Learning.</p>
 
          <a href="index.html" class="btn">Home</a>
-        <a href="news_publications.html" class="btn">News & Publications</a>
+        <a href="news_publications.html" class="btn">News</a>
         <a href="cv.html" class="btn">CV</a>
     </div>
     
