--- a/cv.html
+++ b/cv.html
@@ -52,7 +52,7 @@
 
          <a href="index.html" class="btn">Home</a>
 	 <a href="blog.html" class="btn">Blog</a>
-        <a href="news_publications.html" class="btn">News & Publications</a>
+        <a href="news_publications.html" class="btn">News</a>
 
     </div>
     
