--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
     <div class="container">
     
         <main>
-   <embed src="Jessica_Nicholson_PhD_Student.pdf" type="application/pdf" width="100%" height="600px">
+   <embed src="Jessica_Nicholson_CV.pdf" type="application/pdf" width="100%" height="600px">
     
     <p>If you cannot view the PDF, you can <a href="your_pdf_file.pdf">download it here</a>.</p>
     </main>
