--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
       <p>This blog post discusses the application of Variational Autoencoders (VAEs) in reinforcement learning tasks.</p>
     </article>
    <article>
-        <a href="im_methods.html" class="btn">Intrinsic Motivation Methods</a>
+        <a href="https://medium.com/@nicholsonjm92/a-deepsea-dive-into-intrinsic-motivation-methods-in-reinforcement-learning-1d39055ffdda" class="btn">A DeepSea-Dive into Intrinsic Motivation Methods in Reinforcement Learning</a>
         <p>This blog post explores the concept of intrinsic motivation in reinforcement learning and its various methods.</p>
     </article>
   
